
add_subdirectory(Demo)
add_subdirectory(SelfTest)
add_subdirectory(Test1.1)
add_subdirectory(Test1.2)
add_subdirectory(Test2.1)
add_subdirectory(Test2.3)
add_subdirectory(Test3.1)
add_subdirectory(Test3.2)
add_subdirectory(Test4.1)
add_subdirectory(Test4.2)
add_subdirectory(Test4.3)
add_subdirectory(Test5.1)
add_subdirectory(Test5.2)
add_subdirectory(Test6)
add_subdirectory(Test7)
add_subdirectory(Test8.1)
add_subdirectory(Test8.2)
add_subdirectory(Test9.1)
add_subdirectory(Test9.2)
add_subdirectory(Test10)
add_subdirectory(Test11)